@@ -6,8 +6,10 @@ package dhz.skz.diseminacija.datatransfer;
 
 import dhz.skz.diseminacija.datatransfer.exceptions.ProtocolNotSupported;
 import dhz.skz.aqdb.entity.PrimateljiPodataka;
-import java.net.URI;
-import java.net.URISyntaxException;
+import dhz.skz.diseminacija.datatransfer.exceptions.DataTransferException;
+import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -19,29 +21,24 @@ public class DataTransferFactory {
 
     private static final Logger log = Logger.getLogger(DataTransferFactory.class.getName());
 
-    public static DataTransfer getTransferObj(PrimateljiPodataka pp) throws ProtocolNotSupported {
+    public static DataTransfer getTransferObj(PrimateljiPodataka pp) throws ProtocolNotSupported, MalformedURLException, DataTransferException, IOException {
         DataTransfer dto = null;
-        try {
-            URI url = new URI(pp.getUrl());
-            String protokol = url.getScheme();
+        URL url = new URL(pp.getUrl());
+        String protokol = url.getProtocol();
 
-            switch (protokol) {
-                case "file":
-                    log.log(Level.INFO, "Protokol file: {0}", url.getPath());
-                    dto = new LocalSaveFile(url.getPath());
-                    break;
-                case "ftp":
-                    log.log(Level.INFO, "Protokol ftp  {0}", url.getPath());
-                    dto = new FtpTransfer(url);
-                    break;
-                default:
-                    throw new ProtocolNotSupported(protokol);
-            }
-
-        } catch (URISyntaxException ex) {
-            log.log(Level.SEVERE, null, ex);
-            throw new ProtocolNotSupported("Los URL");
+        switch (protokol) {
+            case "file":
+                log.log(Level.INFO, "Protokol file: {0}", url.getPath());
+                dto = new LocalSaveFile();
+                break;
+            case "ftp":
+                log.log(Level.INFO, "Protokol ftp  {0}", url.getPath());
+                dto = new FtpTransfer();
+                break;
+            default:
+                throw new ProtocolNotSupported(protokol);
         }
         return dto;
+
     }
 }
